test/files/neg/sealed-final-neg.check
sealed-final-neg.scala:18: warning: neg1/Foo::bar(I)I is annotated @inline but could not be inlined:
The method is not final and may be overridden.
    def f = Foo.mkFoo() bar 10
                        ^
sealed-final-neg.scala:38: warning: neg2/Foo::bar(I)I is annotated @inline but could not be inlined:
The method is not final and may be overridden.
    def f = Foo.mkFoo() bar 10
                        ^
error: No warnings can be incurred under -Xfatal-warnings.
two warnings found
one error found
